<resources>
    <string name="app_name">TheGuessingGame</string>
    <string name="pick_a_number_and_i_m_going_to_guess_it">Pick a Number from 0 to 1000 and I\'m going to guess it in 10 tries.</string>
    <string name="enter_number_here">Enter Number Here</string>
    <string name="picture_of_a_monkey">Picture Of A Monkey</string>
    <string name="i_ll_close_my_eyes">Look\! I\'ll Close My Eyes</string>
    <string name="now_i_ll_guess">oK! Now I\'ll guess</string>
    <string name="done">DONE!</string>
    <string name="is_your_number">Is Your Number...</string>
    <string name="yes">GREATER</string>
    <string name="no">LESS</string>
    <string name="IsItLessThan">\"Is your number Greater or less than, %1$d \"</string>
    <string name="IsItGreaterThan">Is your number Greater or less than, %1$d \" </string>
    <string name="First_Guess">Is your number Greater or less than %1$d</string>
    <string name="start_over">Start Over</string>
    <string name="NowIGuess">Now I will guess what your number is in %1$s tries or less!</string>
    <string name="neither">Neither</string>
    <string name="GotIt">AHA!! Your Number is %1$d</string>
    <string name="countit">Number of guesses = %1$d</string>
    <string name="pick_a_number_from">Pick a number from</string>
    <string name="to">to</string>
</resources>
