<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#923BD8D8"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewID1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/pick_a_number_and_i_m_going_to_guess_it"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/numberTVID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_number_here"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewID2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/i_ll_close_my_eyes"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture_of_a_monkey"
            app:srcCompat="@mipmap/i_close_my_eyes" />

        <Button
            android:id="@+id/doneBtnID"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="#B027D6" />

    </LinearLayout>
</ScrollView>